# my_wifi_test

./: CMakeLists.txt  partitions-16MiB.csv  sdkconfig  sdkconfig.old
components/device_drivers/: CMakeLists.txt  spi.cc  spi_example.cc
components/device_drivers/include/hal/: spi_example.h
components/device_drivers/include/spi/: spi.h
components/esp-wifi-connect-main/: wifi_configuration_ap.cc  wifi_manager.cc  wifi_station.cc
components/esp-wifi-connect-main/include/: wifi_manager.h  wifi_station.h
main/: CMakeLists.txt  HttpMultiClient.cc  HttpMultiClient.h  MyEventDemo.cc  MyEventDemo.h  fourier_analysis.cc  fourier_analysis.h  led.cc  led.h  main.cc  mqtt_app.cc  mqtt_app.h  ota_update.cc  ota_update.h  spi_example.cc  spi_example.h  wifi.cc  wifi.h
others/: first.txt  memory.txt
tools/: fft_server.py  fft_server_README.txt
